tests/macros/duplicate/extension.stderr
error: duplicate option `extension`
 --> $DIR/extension.rs:4:9
  |
4 |         extension: todo!(),
  |         ^^^^^^^^^
