tests/macros/duplicate/extension.rs
fn main() {
    let q = inquisition::questions![editor {
        extension: todo!(),
        extension: todo!(),
    }];
}
